küçük değişiklikler yapıldı

--- a/app/src/main/res/layout/fragment_demibas_detay.xml
+++ b/app/src/main/res/layout/fragment_demibas_detay.xml
@@ -17,14 +17,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_height="match_parent">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tilAdi"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
                 android:background="@color/demirbasEdittext"
                 android:layout_marginTop="@dimen/margin_top_demirbas"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -183,6 +183,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="start|top"
+                    android:hint="Açıklama"
                     android:inputType="textMultiLine"
                     android:text="@={viewModel.envanter.aciklama}" />
             </com.google.android.material.textfield.TextInputLayout>
