--- a/app/src/main/res/layout/fragment_demibas_detay.xml
+++ b/app/src/main/res/layout/fragment_demibas_detay.xml
@@ -190,7 +190,9 @@
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="@+id/etFaturaNo"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etFaturaTarihi"></androidx.recyclerview.widget.RecyclerView>
+                app:layout_constraintTop_toBottomOf="@+id/etFaturaTarihi">
+
+            </androidx.recyclerview.widget.RecyclerView>
 
 
             <Button
