--- a/app/src/main/res/layout/fragment_demibas_list.xml
+++ b/app/src/main/res/layout/fragment_demibas_list.xml
@@ -10,6 +10,10 @@
         <variable
             name="viewModel"
             type="com.uniyaz.mobiltif.viewmodel.DemirbasListViewModel" />
+
+        <variable
+            name="fragment"
+            type="com.uniyaz.mobiltif.ui.fragments.DemirbasListFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -93,6 +97,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="Online Tif İşlemleri"
+            android:onClick="@{()->fragment.onClickOnlineTifIslem()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/rvDemirbasList"
             app:layout_constraintStart_toStartOf="@+id/rvDemirbasList" />
