--- a/app/src/main/res/layout/fragment_demibas_detay.xml
+++ b/app/src/main/res/layout/fragment_demibas_detay.xml
@@ -256,10 +256,9 @@
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="@+id/tilFaturaNo"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etFaturaTarihi">
+                app:layout_constraintTop_toBottomOf="@+id/tilFaturaTarihi">
 
             </androidx.recyclerview.widget.RecyclerView>
-                app:layout_constraintTop_toBottomOf="@+id/tilFaturaTarihi"></androidx.recyclerview.widget.RecyclerView>
 
 
             <Button
