--- a/app/src/main/res/layout/fragment_demibas_list.xml
+++ b/app/src/main/res/layout/fragment_demibas_list.xml
@@ -30,6 +30,9 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
+            android:paddingStart="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:background="@color/colorWhite"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +101,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="Online Tif İşlemleri"
-            android:onClick="@{()->fragment.onClickOnlineTifIslem()}"
+            android:onClick="@{()->fragment.onBtnOnlineTifIslemClicked()    }"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/rvDemirbasList"
             app:layout_constraintStart_toStartOf="@+id/rvDemirbasList" />
