--- a/app/src/main/res/layout/fragment_tif.xml
+++ b/app/src/main/res/layout/fragment_tif.xml
@@ -7,16 +7,20 @@
             <variable
                 name="viewModel"
                 type="com.uniyaz.mobiltif.viewmodel.TifViewModel" />
+
+            <variable
+                name="fragment"
+                type="com.uniyaz.mobiltif.ui.fragments.TifFragment" />
         </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingStart="10dp">
 
         <ListView
             android:id="@+id/lvTifList"
             android:layout_width="0dp"
-            android:layout_height="158dp"
-            android:layout_marginStart="8dp"
+            android:layout_height="258dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,9 +30,11 @@
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:entries="@array/arrayIslemTurleri"
+            android:onItemSelected="@{(parent,view,pos,id)->fragment.onItemSelectedSpinner(parent,view,pos,id)}"
             app:layout_constraintEnd_toEndOf="@+id/lvTifList"
             app:layout_constraintStart_toStartOf="@+id/lvTifList"
             app:layout_constraintTop_toBottomOf="@+id/lvTifList" />
@@ -37,7 +43,6 @@
             android:id="@+id/f_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_alignParentTop="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/spinner"
             app:layout_constraintStart_toStartOf="@+id/spinner"
