--- a/app/src/main/res/layout/fragment_tif_islem3.xml
+++ b/app/src/main/res/layout/fragment_tif_islem3.xml
@@ -31,7 +31,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilDayanakBelgeTarihi"
+            android:id="@+id/tilGirisYapilanAmbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -47,13 +47,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilKayittanDusmeNedeni"
+            android:id="@+id/tilAmbarSorumlusu"
             android:layout_width="395dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilDayanakBelgeTarihi"
-            app:layout_constraintStart_toStartOf="@+id/tilDayanakBelgeTarihi"
-            app:layout_constraintTop_toBottomOf="@+id/tilDayanakBelgeTarihi">
+            app:layout_constraintEnd_toEndOf="@+id/tilGirisYapilanAmbar"
+            app:layout_constraintStart_toStartOf="@+id/tilGirisYapilanAmbar"
+            app:layout_constraintTop_toBottomOf="@+id/tilGirisYapilanAmbar">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -63,13 +63,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilDigerKayittanDusmeNedeni"
+            android:id="@+id/tilAciklama"
             android:layout_width="395dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilKayittanDusmeNedeni"
-            app:layout_constraintStart_toStartOf="@+id/tilKayittanDusmeNedeni"
-            app:layout_constraintTop_toBottomOf="@+id/tilKayittanDusmeNedeni">
+            app:layout_constraintEnd_toEndOf="@+id/tilAmbarSorumlusu"
+            app:layout_constraintStart_toStartOf="@+id/tilAmbarSorumlusu"
+            app:layout_constraintTop_toBottomOf="@+id/tilAmbarSorumlusu">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -83,9 +83,9 @@
             android:layout_width="395dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilDigerKayittanDusmeNedeni"
-            app:layout_constraintStart_toStartOf="@+id/tilDigerKayittanDusmeNedeni"
-            app:layout_constraintTop_toBottomOf="@+id/tilDigerKayittanDusmeNedeni">
+            app:layout_constraintEnd_toEndOf="@+id/tilAciklama"
+            app:layout_constraintStart_toStartOf="@+id/tilAciklama"
+            app:layout_constraintTop_toBottomOf="@+id/tilAciklama">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
