--- a/app/src/main/res/layout/item_envanter_card_selectable.xml
+++ b/app/src/main/res/layout/item_envanter_card_selectable.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -11,16 +12,17 @@
         <variable
             name="activity"
             type="com.uniyaz.mobiltif.ui.activities.MainActivity" />
+
     </data>
 
+
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:onClick="@{()->viewModel.onClick()}"
-
-        android:background="@color/cardview_shadow_start_color">
+        android:background="@color/cardview_shadow_start_color"
+        android:onClick="@{()->viewModel.onClick()}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -32,7 +34,6 @@
                 android:id="@+id/viewNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:checked="@={viewModel.selected}"
@@ -41,25 +42,35 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
             <TextView
                 android:id="@+id/tvUst"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@{viewModel.ust}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/viewNumber"
-                app:layout_constraintTop_toTopOf="@+id/viewNumber" />
+                app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/viewCizgi"
+                app:layout_constraintTop_toTopOf="parent" />
+            <!--android:text="@{demirbas.idString + demirbas.tasinir + demirbas.faturaNo}"-->
+
 
             <View
                 android:id="@+id/viewCizgi"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:background="@color/colorItemEnvanterCizgi"
-                app:layout_constraintEnd_toEndOf="@+id/tvUst"
-                app:layout_constraintStart_toStartOf="@+id/tvUst"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/viewNumber"
                 app:layout_constraintTop_toBottomOf="@+id/tvUst" />
+
 
             <TextView
                 android:id="@+id/tvAlt"
@@ -68,32 +79,37 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="@{viewModel.alt}"
-                app:layout_constraintBottom_toBottomOf="@+id/viewNumber"
-                app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
-                app:layout_constraintStart_toStartOf="@+id/viewCizgi"
-                app:layout_constraintTop_toBottomOf="@+id/viewCizgi" />
-
-            <Button
-                android:id="@+id/btnResim"
-                android:layout_width="61dp"
-                android:layout_height="29dp"
-                android:layout_marginEnd="8dp"
-                android:drawableLeft="@drawable/ic_search_for_btn"
-                android:text="Resim"
-                android:textSize="8sp"
-                app:layout_constraintEnd_toEndOf="@+id/tvAlt"
-                app:layout_constraintTop_toBottomOf="@+id/tvAlt" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/tvUst"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/tvUst"
+                app:layout_constraintTop_toBottomOf="@+id/viewCizgi"
+                app:layout_constraintVertical_bias="0.0" />
+            <!--android:text="@{demirbas.adi}"-->
 
             <Button
                 android:id="@+id/btnDetay"
                 android:layout_width="61dp"
                 android:layout_height="29dp"
+                android:layout_marginEnd="5dp"
                 android:drawableLeft="@drawable/ic_search_for_btn"
                 android:onClick="@{(view)->activity.goEnvanterDetayFragment(viewModel.envanter)}"
                 android:text="Detay"
                 android:textSize="8sp"
+                app:layout_constraintBottom_toBottomOf="@+id/btnResim"
                 app:layout_constraintEnd_toStartOf="@+id/btnResim"
                 app:layout_constraintTop_toTopOf="@+id/btnResim" />
+
+            <Button
+                android:id="@+id/btnResim"
+                android:layout_width="61dp"
+                android:layout_height="29dp"
+                android:layout_marginTop="5dp"
+                android:drawableLeft="@drawable/ic_search_for_btn"
+                android:text="Resim"
+                android:textSize="8sp"
+                app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
+                app:layout_constraintTop_toBottomOf="@+id/tvAlt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
