--- a/app/src/main/res/layout/item_tif_envanter_card.xml
+++ b/app/src/main/res/layout/item_tif_envanter_card.xml
@@ -32,7 +32,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="#197b30"
                 android:gravity="center"
-                android:text="1"
+                android:text="@{viewModel.index}"
                 android:textColor="#ffffff"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="122234 / Masa / 155 05 09 08 06 01"
+                android:text="@{viewModel.labelUst}"
                 app:layout_constraintBottom_toTopOf="@id/viewCizgi"
                 app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="100 * 60 Dikdörtgen Masa Siyah"
+                android:text="@{viewModel.labelAlt}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/tvUst"
                 app:layout_constraintHorizontal_bias="0.0"
