--- a/app/src/main/res/layout/fragment_tif.xml
+++ b/app/src/main/res/layout/fragment_tif.xml
@@ -3,52 +3,88 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.fragments.TifIslem1Fragment">
-        <data>
-            <variable
-                name="viewModel"
-                type="com.uniyaz.mobiltif.viewmodel.TifViewModel" />
 
-            <variable
-                name="fragment"
-                type="com.uniyaz.mobiltif.ui.fragments.TifFragment" />
-        </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.uniyaz.mobiltif.viewmodel.TifViewModel" />
+
+        <variable
+            name="fragment"
+            type="com.uniyaz.mobiltif.ui.fragments.TifFragment" />
+    </data>
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingStart="10dp">
 
-        <ListView
-            android:id="@+id/lvTifList"
-            android:layout_width="0dp"
-            android:layout_height="258dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+        >
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@color/demirbasEdittext"
-            android:entries="@array/arrayIslemTurleri"
-            android:onItemSelected="@{(parent,view,pos,id)->fragment.onItemSelectedSpinner(parent,view,pos,id)}"
-            app:layout_constraintEnd_toEndOf="@+id/lvTifList"
-            app:layout_constraintStart_toStartOf="@+id/lvTifList"
-            app:layout_constraintTop_toBottomOf="@+id/lvTifList" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="10dp">
 
-        <FrameLayout
-            android:id="@+id/f_layout"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/spinner"
-            app:layout_constraintStart_toStartOf="@+id/spinner"
-            app:layout_constraintTop_toBottomOf="@+id/spinner"></FrameLayout>
+            <ListView
+                android:id="@+id/lvTifList"
+                android:layout_width="0dp"
+                android:layout_height="258dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <RelativeLayout
+                android:id="@+id/spinnerTest"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/demirbasEdittext"
+                app:layout_constraintEnd_toEndOf="@+id/lvTifList"
+                app:layout_constraintStart_toStartOf="@+id/lvTifList"
+                app:layout_constraintTop_toBottomOf="@+id/lvTifList"
+                >
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="0dp"
+                    android:onItemSelected="@{(parent,view,pos,id)->fragment.onItemSelectedSpinner(parent,view,pos,id)}"
+                    android:entries="@array/arrayIslemTurleri"
+                    android:textSize="16sp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_logout" />
+
+            </RelativeLayout>
+            <!--<Spinner-->
+            <!--android:id="@+id/spinner"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--style="@style/Widget.AppCompat.DropDownItem.Spinner"-->
+            <!--android:entries="@array/arrayIslemTurleri"-->
+            <!--android:onItemSelected="@{(parent,view,pos,id)->fragment.onItemSelectedSpinner(parent,view,pos,id)}"-->
+            <!--app:layout_constraintEnd_toEndOf="@+id/lvTifList"-->
+            <!--app:layout_constraintStart_toStartOf="@+id/lvTifList"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/lvTifList" />-->
+
+            <FrameLayout
+                android:id="@+id/f_layout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/spinnerTest"
+                app:layout_constraintStart_toStartOf="@+id/spinnerTest"
+                app:layout_constraintTop_toBottomOf="@+id/spinnerTest"></FrameLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
