--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="padding_field">5dp</dimen>
     <dimen name="margin_top_demirbas">5dp</dimen>
+
+    <dimen name="editTextHeight">40dp</dimen>
 </resources>
